--- a/cap8/index.html
+++ b/cap8/index.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+	<meta charset="UTF-8" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <title>Document</title>
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+	<title>Document</title>
 </head>
 
 <body>
-    <!-- Conteúdo -->
-    <img src="https://www.ederveiculos.com/img/site/carro.png">
-    <div class="form">
-        <h1>Revenda de carro</h1>
-        Modelo de fabricação: <input type="text" id="modelo"> <br><br>
+	<!-- Conteúdo -->
+
+	<div class="form">
+		<h1>Revenda de carro</h1>
+		Modelo de fabricação: <input type="text" id="modelo"> <br><br>
         Ano de fabricação: <input type="text" id="ano"><br><br>
         Preço: <input type="number" id="preco"><br><br>
 
-        <input type="button" value="CALCULAR ENTRADA" onclick="procedimentos()">
+		<input type="button" value="CALCULAR ENTRADA" id="btnCalcular">
 
-        <p id="modeloCarro">Modelo do carro</p>
-        <p id="entradaCarro">Entrada</p>
-        <p id="parcelasCarro">Valores da parcela</p>
-    </div>
+		<p id="modeloCarro">Modelo do carro</p>
+		<p id="entradaCarro">Entrada</p>
+		<p id="parcelasCarro">Valores da parcela</p>
+	</div>
 </body>
 <script src="script.js"></script>
 
