--- a/cap8/ex1.html
+++ b/cap8/ex1.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natação</title>
 </head>
+
 <body>
-    
+    <h1>Clube de natação</h1>
+    <p> Nome do Atleta
+        <input type="text" value="nome" id="nome">
+    </p>
+    <p> Idade
+        <input type="text" value="Idade" id="idade">
+    </p>
+    <input type="button" value="Categoria Atleta" id="categoria">
+    <br><br>
+    <span id="nomeSpan"></span>
+    <br>
+    <span id="tracosSpans"></span>
+    <br>
+    <span id="categoriaSpan"></span>
+
+    </p>
 </body>
+
 </html>
+
+<script>
+    let nome = document.getElementById("nome");
+    let idade = document.getElementById("idade");
+    let categoria = document.getElementById("categoria");
+    let nomeSpan = document.getElementById("nomeSpan");
+    let tracosSpans = document.getElementById("tracosSpans");
+    let categoriaSpan = document.getElementById("categoriaSpan");
+
+    categoria.addEventListener("click", e => {
+        nome = nome.value;
+        let nLetras = nome.length;
+        let tracados = "";
+        let idadeConv = idade.value;
+        idadeConv = Number(idadeConv);
+        let categoriaPosta = "";
+
+        for (i = 0; i < nLetras; i++) {
+            if (nome[i] == " ") {
+                tracados = tracados + " ";
+            } else {
+                tracados = tracados + "-";
+            }
+        }
+
+        if (idadeConv <= 12) {
+            categoriaPosta = 'Infantil'
+        } else if (idadeConv >= 13 && idadeConv <= 18) {
+            categoriaPosta = 'Junevil'
+        } else {
+            categoriaPosta = 'Adulto'
+        }
+        nomeSpan.textContent = nome;
+        tracosSpans.textContent = tracados;
+        categoriaSpan.textContent = categoriaPosta;
+    })
+</script>
