--- a/cap9/lojaEsportes.html
+++ b/cap9/lojaEsportes.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Exemplo 9.1</title>
+    <link rel="stylesheet" type="text/css" href="lojaDeEsporte.css" media="screen" />
+
 </head>
 
 <body>
@@ -18,11 +20,12 @@
             </div>
             <div class="col-sm-3">
                 <h5>Qual clube você torce?</h5>
-                <form>
+             
                     <input type="radio" name="clube" id="rbVasco"> Vasco <br>
                     <input type="radio" name="clube" id="rbAvai"> Avai <br>
-                    <input type="radio" name="clube" id="rbCRB"> CRB
-                </form>
+                    <input type="radio" name="clube" id="rbCRB"> CRB <br>
+                    <input type="radio" name="clube" id="rbNenhum" checked> Nenhum
+              
             </div>
             <div class="col-sm-2">
                 <img id="imgClube" class="d-none">
@@ -31,55 +34,10 @@
         </div>
     </div>
 </body>
-
 </html>
-<style>
-    pre {
-        font-size: 1.2em;
-    }
-
-    .cores-Brasil {
-        color: black;
-        background-color: red;
-    }
-
-    .cores-Pelotas {
-        color: blue;
-        background-color: yellow;
-    }
-
-    .cores-Farroupilha {
-        color: green;
-        background-color: white;
-    }
-</style>
+<script src="lojaEsporteAprimorado.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 
-<script>
-    const frm = document.querySelector("form")
-    const imClube = document.querySelector("#imgClube")
-    const dvTitulo = document.querySelector("#divTitulo")
-    const trocarClube = () => {
-        let clube // variável que irá receber o nome do clube
-        if (frm.rbVasco.checked) { // verifica qual radiobutton está selecionado
-            clube = "Vasco"
-        } else if (frm.rbAvai.checked) {
-            clube = "Avai"
-        } else {
-            clube = "Crb"
-        }
-        // define as classes de dvTitulo: row e cores do clube
-        dvTitulo.className = `row cores-${clube}`
-        // modifica a imagem de acordo com a seleção do cliente
-        imClube.src = `img/${clube.toLowerCase()}.png`
-        imClube.className = "img-fluid" // muda o estilo para exibir a imagem
-        imClube.alt = `Símbolo do ${clube}` // modifica atributo alt
-        localStorage.setItem("clube", clube) // salva no navegador a escolha do cliente
-    }
-    // associa ao evento change de cada botão do form a função trocarClube
-    frm.rbVasco.addEventListener("change", trocarClube)
-    frm.rbAvai.addEventListener("change", trocarClube)
-    frm.rbCRB.addEventListener("change", trocarClube)
-</script>
+
