--- a/cap9/ex3-mecanica.html
+++ b/cap9/ex3-mecanica.html
@@ -2,23 +2,23 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
 
 <body>
-    <h1>Herbie - Controle de serviços</h1>
-    Servico - Veículo <br>
-    <input type="text">
-    <br><br>
-    <input type="button" id="adicionar" value="Adicionar Serviço">
-    <input type="button" id="exercutar" value="Executar Serviço">
+  <h1>Herbie - Controle de serviços</h1>
+  Servico - Veículo <br>
+  <input type="text" id="servico">
+<br><br>
+  <input type="button" id="adicionar" value="Adicionar Serviço">
+<input type="button" id="executar" value="Executar Serviço">
 
-    <p>Serviços pendentes : </p>
+<p id="pendentes">Servicos pendentes : </p></p>
 
-    <h2>Servico em execução</h2>
-    <span></span>
+<h2>Servico em execução</h2>
+<span></span>
 </body>
 
 </html>
