Começando Capítulo 9 - Criar elementos html dentro do JS

--- a/cap9/ex3-mecanica.html
+++ b/cap9/ex3-mecanica.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Controle de Serviços - Mecânica</title>
 </head>
 
 <body>
@@ -82,7 +82,7 @@
         alert('Verficiou!');
         let servicosBanco = localStorage.getItem("servicosBanco");
         let separando = servicosBanco.split(",");
-        
+
         servicos = separando;
         if(servicosBanco == "") {
             servicos = [];
