--- a/cap10/ex10_3.html
+++ b/cap10/ex10_3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Armazenar Filmes</title>
 </head>
 
@@ -13,11 +13,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4" style="width: 25.333333%;">
-                <img 
-                src="https://images.vexels.com/media/users/3/130344/isolated/lists/61967ede86db12b8dd294b7df269237b-icone-de-tira-de-filme-plana.png" 
-                alt="Filmes" class="img-fluid" >
+                <img src="https://images.vexels.com/media/users/3/130344/isolated/lists/61967ede86db12b8dd294b7df269237b-icone-de-tira-de-filme-plana.png"
+                    alt="Filmes" class="img-fluid">
             </div>
-            <div class="col-sm-8"  >
+            <div class="col-sm-8">
                 <h1>Meus Filmes Favoritos</h1>
                 <form>
                     <p><label for="inTitulo">Título do Filme:</label>
@@ -39,7 +38,8 @@
             </div>
         </div>
     </div>
-    <script src="ex10_3.js"></script>
+
 </body>
+<script src="ex10_3.js"></script>
 
 </html>
