Exercicio 1 - Adicionando fotos e validando idade

--- a/cap10/exercicio1.html
+++ b/cap10/exercicio1.html
@@ -21,10 +21,14 @@
                     <p><label for="inIdade">Idade</label>
                         <input type="number" class="form-control" id="inIdade" required autofocus>
                     </p>
-                    <input type="submit" class="btn btn-primary float-right mb-3" value="Exibir Velas">
-                    <input type="submit" class="btn btn-danger float-right mb-3" value="Novas Velas">
+                    <input type="submit" class="btn btn-primary float-right mb-3" id="exibirVelas" value="Exibir Velas">
+                    <input type="submit" class="btn btn-danger float-right mb-3" id="trocarVelas" value="Novas Velas">
+                    <br>
                 </form>
-              <span></span>
+                <span>
+                    <img src="img/3-1.png">
+                    <img src="img/3-1.png">
+                </span>
             </div>
         </div>
     </div>
