--- a/cap10/exercicio1.html
+++ b/cap10/exercicio1.html
@@ -25,12 +25,13 @@
                     <input type="submit" class="btn btn-danger float-right mb-3" id="trocarVelas" value="Novas Velas">
                     <br>
                 </form>
-                <span>
-                    <img src="img/3-1.png">
-                    <img src="img/3-1.png">
-                </span>
+                <div id="imagens">
+
+                </div>
             </div>
+        
         </div>
+        
     </div>
 </body>
 <script src="exercicio1.js"></script>
