--- a/Cap11/jogoForca2.html
+++ b/Cap11/jogoForca2.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-sm-4">
                 <h3 class="mt-2"> Situação do Jogador </h3>
-                <img src="img/certo.jpg" alt="Situação do Jogador" class="img-fluid">
+                <img src="img/face4.jpg" alt="Situação do Jogador" class="img-fluid">
             </div>
         </div>
         <div class="row corFundo p-3">
